<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Info_App">

    <TextView
        android:id="@+id/Espacio"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/Creditos"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/Hech"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Gru"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>