<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/Espa1"
        android:layout_width="398dp"
        android:layout_height="63dp" />

    <TextView
        android:id="@+id/Let_Inicio"
        android:layout_width="394dp"
        android:layout_height="116dp"
        android:text="@string/Biblioteca"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Rent_Lib"
        android:text="@string/Rent" />

    <TextView
        android:id="@+id/Espa2"
        android:layout_width="398dp"
        android:layout_height="58dp" />

    <Button
        android:id="@+id/Inf_App"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Inf_App"
        android:text="@string/Info" />

</LinearLayout>